# gvac

./: .env  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: build-win-gnu.sh  prepare-webview2-fixed.sh
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: diagnostics.rs  errors.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: api.rs  command_exec.rs  http.rs  mod.rs  session.rs  sftp.rs  terminal.rs
src-tauri/src/services/: api.rs  http.rs  mod.rs  ssh.rs
src/api/: cmdb.ts  service.ts  ssh.ts  user.ts
src/lib/: api.ts
src/pages/: LoginPage.tsx  ServersPage.tsx
src/stores/: useAuthStore.ts
